Source/compiler/y.output
Terminaux inutilisés dans la grammaire

   tEXP
   tSPACE
   tTAB
   tNOT


État 19 conflits: 1 décalage/réduction
État 60 conflits: 9 décalage/réduction
État 61 conflits: 9 décalage/réduction
État 62 conflits: 9 décalage/réduction
État 63 conflits: 9 décalage/réduction
État 66 conflits: 9 décalage/réduction
État 67 conflits: 9 décalage/réduction
État 68 conflits: 9 décalage/réduction
État 69 conflits: 9 décalage/réduction
État 73 conflits: 9 décalage/réduction


Grammaire

    0 $accept: input $end

    1 input: DEBUT

    2 $@1: /* vide */

    3 DEBUT: tMAIN $@1 tACC_OUVR INSTRUCTIONS tACC_FERM

    4 OPERATION: AFFECTATION
    5          | DECLARATION
    6          | PRINTF

    7 INSTRUCTION: OPERATION tPOINT_VIRGULE
    8            | IF
    9            | WHILE

   10 INSTRUCTIONS: INSTRUCTION INSTRUCTIONS
   11             | INSTRUCTION

   12 TYPE: tINT
   13     | tCONST

   14 DECLARATION: TYPE tID DECLARATION2
   15            | TYPE tID

   16 DECLARATION2: tVIRG tID DECLARATION2
   17             | tVIRG tID

   18 AFFECTATION: /* vide */
   19            | tID tEQ EXPRESSION
   20            | DECLARATION tEQ EXPRESSION

   21 EXPRESSION: EXPRESSION tADD EXPRESSION
   22           | EXPRESSION tSUB EXPRESSION
   23           | EXPRESSION tMUL EXPRESSION
   24           | EXPRESSION tDIV EXPRESSION
   25           | tPAR_OUVR EXPRESSION tPAR_FERM
   26           | tID
   27           | tDECI
   28           | EXPRESSION tSUP EXPRESSION
   29           | EXPRESSION tINF EXPRESSION
   30           | EXPRESSION tEQ tEQ EXPRESSION
   31           | EXPRESSION tOR EXPRESSION
   32           | EXPRESSION tAND EXPRESSION

   33 PRINTF: tPRINTF tID tPAR_FERM

   34 $@2: /* vide */

   35 IF: tIF tPAR_OUVR EXPRESSION tPAR_FERM $@2 BODY

   36 $@3: /* vide */

   37 IF: IF tELSE $@3 BODY

   38 $@4: /* vide */

   39 $@5: /* vide */

   40 WHILE: $@4 tWHILE tPAR_OUVR EXPRESSION tPAR_FERM $@5 BODY

   41 BODY: tACC_OUVR INSTRUCTIONS tACC_FERM
   42     | INSTRUCTION


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 3
tPRINTF (259) 33
tINT (260) 12
tCONST (261) 13
tEXP (262)
tACC_OUVR (263) 3 41
tACC_FERM (264) 3 41
tADD (265) 21
tSUB (266) 22
tMUL (267) 23
tDIV (268) 24
tEQ (269) 19 20 30
tPAR_OUVR (270) 25 35 40
tPAR_FERM (271) 25 33 35 40
tVIRG (272) 16 17
tSPACE (273)
tTAB (274)
tPOINT_VIRGULE (275) 7
tELSE (276) 37
tIF (277) 35
tINF (278) 29
tSUP (279) 28
tOR (280) 31
tAND (281) 32
tNOT (282)
tWHILE (283) 40
tID (284) 14 15 16 17 19 26 33
tDECI (285) 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (31)
    à gauche: 0
input (32)
    à gauche: 1, à droite: 0
DEBUT (33)
    à gauche: 3, à droite: 1
$@1 (34)
    à gauche: 2, à droite: 3
OPERATION (35)
    à gauche: 4 5 6, à droite: 7
INSTRUCTION (36)
    à gauche: 7 8 9, à droite: 10 11 42
INSTRUCTIONS (37)
    à gauche: 10 11, à droite: 3 10 41
TYPE (38)
    à gauche: 12 13, à droite: 14 15
DECLARATION (39)
    à gauche: 14 15, à droite: 5 20
DECLARATION2 (40)
    à gauche: 16 17, à droite: 14 16
AFFECTATION (41)
    à gauche: 18 19 20, à droite: 4
EXPRESSION (42)
    à gauche: 21 22 23 24 25 26 27 28 29 30 31 32, à droite: 19 20
    21 22 23 24 25 28 29 30 31 32 35 40
PRINTF (43)
    à gauche: 33, à droite: 6
IF (44)
    à gauche: 35 37, à droite: 8 37
$@2 (45)
    à gauche: 34, à droite: 35
$@3 (46)
    à gauche: 36, à droite: 37
WHILE (47)
    à gauche: 40, à droite: 9
$@4 (48)
    à gauche: 38, à droite: 40
$@5 (49)
    à gauche: 39, à droite: 40
BODY (50)
    à gauche: 41 42, à droite: 35 37 40


état 0

    0 $accept: . input $end

    tMAIN  décalage et aller à l'état 1

    input  aller à l'état 2
    DEBUT  aller à l'état 3


état 1

    3 DEBUT: tMAIN . $@1 tACC_OUVR INSTRUCTIONS tACC_FERM

    $défaut  réduction par utilisation de la règle 2 ($@1)

    $@1  aller à l'état 4


état 2

    0 $accept: input . $end

    $end  décalage et aller à l'état 5


état 3

    1 input: DEBUT .

    $défaut  réduction par utilisation de la règle 1 (input)


état 4

    3 DEBUT: tMAIN $@1 . tACC_OUVR INSTRUCTIONS tACC_FERM

    tACC_OUVR  décalage et aller à l'état 6


état 5

    0 $accept: input $end .

    $défaut  accepter


état 6

    3 DEBUT: tMAIN $@1 tACC_OUVR . INSTRUCTIONS tACC_FERM

    tPRINTF  décalage et aller à l'état 7
    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    tWHILE    réduction par utilisation de la règle 38 ($@4)
    $défaut  réduction par utilisation de la règle 18 (AFFECTATION)

    OPERATION     aller à l'état 12
    INSTRUCTION   aller à l'état 13
    INSTRUCTIONS  aller à l'état 14
    TYPE          aller à l'état 15
    DECLARATION   aller à l'état 16
    AFFECTATION   aller à l'état 17
    PRINTF        aller à l'état 18
    IF            aller à l'état 19
    WHILE         aller à l'état 20
    $@4           aller à l'état 21


état 7

   33 PRINTF: tPRINTF . tID tPAR_FERM

    tID  décalage et aller à l'état 22


état 8

   12 TYPE: tINT .

    $défaut  réduction par utilisation de la règle 12 (TYPE)


état 9

   13 TYPE: tCONST .

    $défaut  réduction par utilisation de la règle 13 (TYPE)


état 10

   35 IF: tIF . tPAR_OUVR EXPRESSION tPAR_FERM $@2 BODY

    tPAR_OUVR  décalage et aller à l'état 23


état 11

   19 AFFECTATION: tID . tEQ EXPRESSION

    tEQ  décalage et aller à l'état 24


état 12

    7 INSTRUCTION: OPERATION . tPOINT_VIRGULE

    tPOINT_VIRGULE  décalage et aller à l'état 25


état 13

   10 INSTRUCTIONS: INSTRUCTION . INSTRUCTIONS
   11             | INSTRUCTION .

    tPRINTF  décalage et aller à l'état 7
    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    tPOINT_VIRGULE  réduction par utilisation de la règle 18 (AFFECTATION)
    tWHILE          réduction par utilisation de la règle 38 ($@4)
    $défaut        réduction par utilisation de la règle 11 (INSTRUCTIONS)

    OPERATION     aller à l'état 12
    INSTRUCTION   aller à l'état 13
    INSTRUCTIONS  aller à l'état 26
    TYPE          aller à l'état 15
    DECLARATION   aller à l'état 16
    AFFECTATION   aller à l'état 17
    PRINTF        aller à l'état 18
    IF            aller à l'état 19
    WHILE         aller à l'état 20
    $@4           aller à l'état 21


état 14

    3 DEBUT: tMAIN $@1 tACC_OUVR INSTRUCTIONS . tACC_FERM

    tACC_FERM  décalage et aller à l'état 27


état 15

   14 DECLARATION: TYPE . tID DECLARATION2
   15            | TYPE . tID

    tID  décalage et aller à l'état 28


état 16

    5 OPERATION: DECLARATION .
   20 AFFECTATION: DECLARATION . tEQ EXPRESSION

    tEQ  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 5 (OPERATION)


état 17

    4 OPERATION: AFFECTATION .

    $défaut  réduction par utilisation de la règle 4 (OPERATION)


état 18

    6 OPERATION: PRINTF .

    $défaut  réduction par utilisation de la règle 6 (OPERATION)


état 19

    8 INSTRUCTION: IF .
   37 IF: IF . tELSE $@3 BODY

    tELSE  décalage et aller à l'état 30

    tELSE     [réduction par utilisation de la règle 8 (INSTRUCTION)]
    $défaut  réduction par utilisation de la règle 8 (INSTRUCTION)


état 20

    9 INSTRUCTION: WHILE .

    $défaut  réduction par utilisation de la règle 9 (INSTRUCTION)


état 21

   40 WHILE: $@4 . tWHILE tPAR_OUVR EXPRESSION tPAR_FERM $@5 BODY

    tWHILE  décalage et aller à l'état 31


état 22

   33 PRINTF: tPRINTF tID . tPAR_FERM

    tPAR_FERM  décalage et aller à l'état 32


état 23

   35 IF: tIF tPAR_OUVR . EXPRESSION tPAR_FERM $@2 BODY

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 36


état 24

   19 AFFECTATION: tID tEQ . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 37


état 25

    7 INSTRUCTION: OPERATION tPOINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 7 (INSTRUCTION)


état 26

   10 INSTRUCTIONS: INSTRUCTION INSTRUCTIONS .

    $défaut  réduction par utilisation de la règle 10 (INSTRUCTIONS)


état 27

    3 DEBUT: tMAIN $@1 tACC_OUVR INSTRUCTIONS tACC_FERM .

    $défaut  réduction par utilisation de la règle 3 (DEBUT)


état 28

   14 DECLARATION: TYPE tID . DECLARATION2
   15            | TYPE tID .

    tVIRG  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 15 (DECLARATION)

    DECLARATION2  aller à l'état 39


état 29

   20 AFFECTATION: DECLARATION tEQ . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 40


état 30

   37 IF: IF tELSE . $@3 BODY

    $défaut  réduction par utilisation de la règle 36 ($@3)

    $@3  aller à l'état 41


état 31

   40 WHILE: $@4 tWHILE . tPAR_OUVR EXPRESSION tPAR_FERM $@5 BODY

    tPAR_OUVR  décalage et aller à l'état 42


état 32

   33 PRINTF: tPRINTF tID tPAR_FERM .

    $défaut  réduction par utilisation de la règle 33 (PRINTF)


état 33

   25 EXPRESSION: tPAR_OUVR . EXPRESSION tPAR_FERM

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 43


état 34

   26 EXPRESSION: tID .

    $défaut  réduction par utilisation de la règle 26 (EXPRESSION)


état 35

   27 EXPRESSION: tDECI .

    $défaut  réduction par utilisation de la règle 27 (EXPRESSION)


état 36

   21 EXPRESSION: EXPRESSION . tADD EXPRESSION
   22           | EXPRESSION . tSUB EXPRESSION
   23           | EXPRESSION . tMUL EXPRESSION
   24           | EXPRESSION . tDIV EXPRESSION
   28           | EXPRESSION . tSUP EXPRESSION
   29           | EXPRESSION . tINF EXPRESSION
   30           | EXPRESSION . tEQ tEQ EXPRESSION
   31           | EXPRESSION . tOR EXPRESSION
   32           | EXPRESSION . tAND EXPRESSION
   35 IF: tIF tPAR_OUVR EXPRESSION . tPAR_FERM $@2 BODY

    tADD       décalage et aller à l'état 44
    tSUB       décalage et aller à l'état 45
    tMUL       décalage et aller à l'état 46
    tDIV       décalage et aller à l'état 47
    tEQ        décalage et aller à l'état 48
    tPAR_FERM  décalage et aller à l'état 49
    tINF       décalage et aller à l'état 50
    tSUP       décalage et aller à l'état 51
    tOR        décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53


état 37

   19 AFFECTATION: tID tEQ EXPRESSION .
   21 EXPRESSION: EXPRESSION . tADD EXPRESSION
   22           | EXPRESSION . tSUB EXPRESSION
   23           | EXPRESSION . tMUL EXPRESSION
   24           | EXPRESSION . tDIV EXPRESSION
   28           | EXPRESSION . tSUP EXPRESSION
   29           | EXPRESSION . tINF EXPRESSION
   30           | EXPRESSION . tEQ tEQ EXPRESSION
   31           | EXPRESSION . tOR EXPRESSION
   32           | EXPRESSION . tAND EXPRESSION

    tADD  décalage et aller à l'état 44
    tSUB  décalage et aller à l'état 45
    tMUL  décalage et aller à l'état 46
    tDIV  décalage et aller à l'état 47
    tEQ   décalage et aller à l'état 48
    tINF  décalage et aller à l'état 50
    tSUP  décalage et aller à l'état 51
    tOR   décalage et aller à l'état 52
    tAND  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 19 (AFFECTATION)


état 38

   16 DECLARATION2: tVIRG . tID DECLARATION2
   17             | tVIRG . tID

    tID  décalage et aller à l'état 54


état 39

   14 DECLARATION: TYPE tID DECLARATION2 .

    $défaut  réduction par utilisation de la règle 14 (DECLARATION)


état 40

   20 AFFECTATION: DECLARATION tEQ EXPRESSION .
   21 EXPRESSION: EXPRESSION . tADD EXPRESSION
   22           | EXPRESSION . tSUB EXPRESSION
   23           | EXPRESSION . tMUL EXPRESSION
   24           | EXPRESSION . tDIV EXPRESSION
   28           | EXPRESSION . tSUP EXPRESSION
   29           | EXPRESSION . tINF EXPRESSION
   30           | EXPRESSION . tEQ tEQ EXPRESSION
   31           | EXPRESSION . tOR EXPRESSION
   32           | EXPRESSION . tAND EXPRESSION

    tADD  décalage et aller à l'état 44
    tSUB  décalage et aller à l'état 45
    tMUL  décalage et aller à l'état 46
    tDIV  décalage et aller à l'état 47
    tEQ   décalage et aller à l'état 48
    tINF  décalage et aller à l'état 50
    tSUP  décalage et aller à l'état 51
    tOR   décalage et aller à l'état 52
    tAND  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 20 (AFFECTATION)


état 41

   37 IF: IF tELSE $@3 . BODY

    tPRINTF    décalage et aller à l'état 7
    tINT       décalage et aller à l'état 8
    tCONST     décalage et aller à l'état 9
    tACC_OUVR  décalage et aller à l'état 55
    tIF        décalage et aller à l'état 10
    tID        décalage et aller à l'état 11

    tWHILE    réduction par utilisation de la règle 38 ($@4)
    $défaut  réduction par utilisation de la règle 18 (AFFECTATION)

    OPERATION    aller à l'état 12
    INSTRUCTION  aller à l'état 56
    TYPE         aller à l'état 15
    DECLARATION  aller à l'état 16
    AFFECTATION  aller à l'état 17
    PRINTF       aller à l'état 18
    IF           aller à l'état 19
    WHILE        aller à l'état 20
    $@4          aller à l'état 21
    BODY         aller à l'état 57


état 42

   40 WHILE: $@4 tWHILE tPAR_OUVR . EXPRESSION tPAR_FERM $@5 BODY

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 58


état 43

   21 EXPRESSION: EXPRESSION . tADD EXPRESSION
   22           | EXPRESSION . tSUB EXPRESSION
   23           | EXPRESSION . tMUL EXPRESSION
   24           | EXPRESSION . tDIV EXPRESSION
   25           | tPAR_OUVR EXPRESSION . tPAR_FERM
   28           | EXPRESSION . tSUP EXPRESSION
   29           | EXPRESSION . tINF EXPRESSION
   30           | EXPRESSION . tEQ tEQ EXPRESSION
   31           | EXPRESSION . tOR EXPRESSION
   32           | EXPRESSION . tAND EXPRESSION

    tADD       décalage et aller à l'état 44
    tSUB       décalage et aller à l'état 45
    tMUL       décalage et aller à l'état 46
    tDIV       décalage et aller à l'état 47
    tEQ        décalage et aller à l'état 48
    tPAR_FERM  décalage et aller à l'état 59
    tINF       décalage et aller à l'état 50
    tSUP       décalage et aller à l'état 51
    tOR        décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53


état 44

   21 EXPRESSION: EXPRESSION tADD . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 60


état 45

   22 EXPRESSION: EXPRESSION tSUB . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 61


état 46

   23 EXPRESSION: EXPRESSION tMUL . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 62


état 47

   24 EXPRESSION: EXPRESSION tDIV . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 63


état 48

   30 EXPRESSION: EXPRESSION tEQ . tEQ EXPRESSION

    tEQ  décalage et aller à l'état 64


état 49

   35 IF: tIF tPAR_OUVR EXPRESSION tPAR_FERM . $@2 BODY

    $défaut  réduction par utilisation de la règle 34 ($@2)

    $@2  aller à l'état 65


état 50

   29 EXPRESSION: EXPRESSION tINF . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 66


état 51

   28 EXPRESSION: EXPRESSION tSUP . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 67


état 52

   31 EXPRESSION: EXPRESSION tOR . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 68


état 53

   32 EXPRESSION: EXPRESSION tAND . EXPRESSION

    tPAR_OUVR  décalage et aller à l'état 33
    tID        décalage et aller à l'état 34
    tDECI      décalage et aller à l'état 35

    EXPRESSION  aller à l'état 69


état 54

   16 DECLARATION2: tVIRG tID . DECLARATION2
   17             | tVIRG tID .

    tVIRG  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 17 (DECLARATION2)

    DECLARATION2  aller à l'état 70


état 55

   41 BODY: tACC_OUVR . INSTRUCTIONS tACC_FERM

    tPRINTF  décalage et aller à l'état 7
    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    tWHILE    réduction par utilisation de la règle 38 ($@4)
    $défaut  réduction par utilisation de la règle 18 (AFFECTATION)

    OPERATION     aller à l'état 12
    INSTRUCTION   aller à l'état 13
    INSTRUCTIONS  aller à l'état 71
    TYPE          aller à l'état 15
    DECLARATION   aller à l'état 16
    AFFECTATION   aller à l'état 17
    PRINTF        aller à l'état 18
    IF            aller à l'état 19
    WHILE         aller à l'état 20
    $@4           aller à l'état 21


état 56

   42 BODY: INSTRUCTION .

    $défaut  réduction par utilisation de la règle 42 (BODY)


état 57

   37 IF: IF tELSE $@3 BODY .

    $défaut  réduction par utilisation de la règle 37 (IF)


état 58
